Fix alignment issue with border on events button when resizing browser

--- a/sass/layout/_events.scss
+++ b/sass/layout/_events.scss
@@ -31,6 +31,8 @@
       letter-spacing: 2.5px;
       position: relative;
       font-weight: 500;       
+      margin: 0 auto;
+      max-width: 200px;
       
     }
   
@@ -43,7 +45,7 @@
       border-bottom: 2px solid $color-beaver;
       bottom: -10px;
       padding-bottom: 0.5rem;
-      left: 170px;
+      left: 69px;
       }
     }
   }
